--- a/assets/i18n/zh_CN.json
+++ b/assets/i18n/zh_CN.json
@@ -3,6 +3,13 @@
 
   },
 
+  "splash_screen": {
+    "initializing": "正在初始化",
+    "read_i18n_config": "读取语言配置",
+    "read_system_config": "读取系统配置",
+    "finished": "初始化完成"
+  },
+
   "menu": {
     "file": "文件",
     "exit": "退出"
