feat(util): 新增音频Tag的相关API
可以显示歌曲名和艺术家了

[skip ci]

--- a/assets/i18n/zh_CN.json
+++ b/assets/i18n/zh_CN.json
@@ -11,6 +11,11 @@
     "finished": "初始化完成"
   },
 
+  "player": {
+    "unknown": "未知",
+    "error_while_loading_file": "加载音频文件出错"
+  },
+
   "menu": {
     "file": "文件",
     "test": "测试",
