feat(util): 新增播放列表的相关功能
可以添加到播放列表然后播放了

[skip ci]

--- a/assets/i18n/zh_CN.json
+++ b/assets/i18n/zh_CN.json
@@ -22,7 +22,8 @@
     "random_play": "随机播放",
     "single_play": "单曲播放",
     "repeat": "循环",
-    "no_repeat": "不循环"
+    "no_repeat": "不循环",
+    "playlist": "播放列表"
   },
 
   "menu": {
