--- a/assets/i18n/zh_CN.json
+++ b/assets/i18n/zh_CN.json
@@ -8,6 +8,7 @@
     "initializing": "正在初始化",
     "read_i18n_config": "读取语言配置",
     "read_system_config": "读取系统配置",
+    "init_audio_player": "初始化播放器",
     "finished": "初始化完成"
   },
 
